--- a/src/app/components/flight/flight.component.css
+++ b/src/app/components/flight/flight.component.css
@@ -1,12 +1,27 @@
 .body{
   margin: auto;
+  margin-top: 20px;
+  padding: 24px 48px;
   width: 60%;
-  padding: auto;
+  background-color: whitesmoke;
+  border-color:deepskyblue;
+  border-style:dashed;
+  border-radius: 8px 8px;
+  background: rgb(254,255,255);
+  background: -moz-linear-gradient(top,  rgba(254,255,255,1) 0%, rgba(210,235,249,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,255,255,1)), color-stop(100%,rgba(210,235,249,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(254,255,255,1) 0%,rgba(210,235,249,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(254,255,255,1) 0%,rgba(210,235,249,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(254,255,255,1) 0%,rgba(210,235,249,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(254,255,255,1) 0%,rgba(210,235,249,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#d2ebf9',GradientType=0 ); /* IE6-9 */
+  box-shadow: 0px 0px 10px 5px rgba(200, 197, 200, 1);
 }
 .flightname{
   text-align: center;
-  padding-top: 35px;
+  padding-top: 2px;
   font-size: 50px;
+  font-weight: bold;
   font-style: oblique;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: indigo;
